@@ -34,7 +34,7 @@ def tokenize(buf):
     except LexingError as e:
         pos = e.getsourcepos()
         raise LexException("Could not identify the next token.",
-                           pos.lineno, pos.colno)
+                           pos.lineno, pos.colno, buf)
     except LexException as e:
         if e.source is None:
             e.source = buf
